--- a/IntrestCalculator/client/frontend.html
+++ b/IntrestCalculator/client/frontend.html
@@ -25,12 +25,21 @@
         document.getElementById("Interestform").addEventListener("submit", function(e){
             e.preventDefault();
 
-            // Capture form values inside the event listener
             const principle = document.getElementById("principle").value;
             const rate = document.getElementById("rate").value;
             const time = document.getElementById("time").value;
 
-            // Make the fetch request here
+            const values = [principle,rate,time]
+          
+
+            if(isNaN(principle) || principle===null || isNaN(rate) || rate===null || isNaN(time) || time===null)
+            {
+                console.log("in validation")
+                alert("Please enter only numeric value");
+                return false;
+            }
+
+            
             fetch("http://localhost:3000/interest", {
                 method: "POST",  
                 headers: {
@@ -47,6 +56,8 @@
                 console.error(error);
             });
         });
+
+
     </script>
 </body>
 </html>
